apollo-router/tests/integration/snapshots/integration_tests__integration__demand_control__actual_cost_can_vary_based_on_mode@basic_mutation_by_response_shape.snap
---
source: apollo-router/tests/integration/demand_control.rs
expression: parse_result_for_snapshot(response).await
---
{
  "apollo::demand_control::actual_cost": 0.0,
  "apollo::demand_control::actual_cost_by_subgraph": null,
  "apollo::demand_control::estimated_cost": 10.0,
  "apollo::demand_control::result": "COST_OK",
  "apollo::demand_control::strategy": "static_estimated",
  "apollo::experimental_mock_subgraphs::subgraph_call_count": {
    "products": 1
  },
  "body": {
    "data": {
      "doSomething": 6
    }
  }
}
