apollo-router/tests/integration/snapshots/integration_tests__integration__demand_control__actual_cost_can_vary_based_on_mode@custom_costs_by_response_shape.snap
---
source: apollo-router/tests/integration/demand_control.rs
expression: parse_result_for_snapshot(response).await
---
{
  "apollo::demand_control::actual_cost": 124.0,
  "apollo::demand_control::actual_cost_by_subgraph": null,
  "apollo::demand_control::estimated_cost": 127.0,
  "apollo::demand_control::estimated_cost_by_subgraph": {
    "subgraphWithCost": 121.0,
    "subgraphWithListSize": 6.0
  },
  "apollo::demand_control::result": "COST_OK",
  "apollo::demand_control::result_by_subgraph": {
    "subgraphWithCost": "COST_OK",
    "subgraphWithListSize": "COST_OK"
  },
  "apollo::demand_control::strategy": "static_estimated",
  "apollo::experimental_mock_subgraphs::subgraph_call_count": {
    "subgraphWithCost": 1,
    "subgraphWithListSize": 1
  },
  "body": {
    "data": {
      "argWithCost": 30,
      "enumWithCost": "A",
      "fieldWithCost": 2,
      "fieldWithDynamicListSize": {
        "items": [
          {
            "id": 7
          },
          {
            "id": 9
          }
        ]
      },
      "fieldWithListSize": [
        "hello",
        "world",
        "and",
        "nearby",
        "planets"
      ],
      "inputWithCost": 5,
      "objectWithCost": {
        "id": 9
      },
      "scalarWithCost": 6172364
    }
  }
}
