apollo-router/tests/integration/snapshots/integration_tests__integration__demand_control__list_size_subgraph_inheritance_changes_estimates@basic_fragments_1_2_3.snap
---
source: apollo-router/tests/integration/demand_control.rs
expression: parse_result_for_snapshot(response).await
---
{
  "apollo::demand_control::actual_cost": 2.0,
  "apollo::demand_control::actual_cost_by_subgraph": {
    "products": 2.0
  },
  "apollo::demand_control::estimated_cost": 5.0,
  "apollo::demand_control::estimated_cost_by_subgraph": {
    "products": 5.0
  },
  "apollo::demand_control::result": "COST_OK",
  "apollo::demand_control::result_by_subgraph": {
    "products": "COST_OK"
  },
  "apollo::demand_control::strategy": "static_estimated",
  "apollo::experimental_mock_subgraphs::subgraph_call_count": {
    "products": 1
  },
  "body": {
    "data": {
      "interfaceInstance1": {
        "field1": null,
        "field2": "hello"
      },
      "someUnion": {
        "innerList": []
      }
    }
  }
}
